fixed design layout issues

--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -7,7 +7,7 @@
         align-items: center;
         justify-items: center;
         margin-top: -50px;
-        margin-left: 50px;;
+        margin-left: 120px;;
         height: 95vh;
         z-index: 1;
         width: 100%;
